syntax = "proto3";

option csharp_namespace = "GrpcDemoServer";

package greet;

// The greeting service definition.
service Greeter {
	// Sends a greeting
	rpc SayHello (HelloRequest) returns (HelloReply);
	rpc SayHelloStream (HelloRequest) returns (stream StreamHelloReply);
}

// The request message containing the user's name.
message HelloRequest {	
	string name = 1;
	int32 sleepTime =2;
}

// The response message containing the greetings.
message HelloReply {
	string message = 1;
}

message StreamHelloReply {
	string message = 1;
}